Attempt to correct sizing images on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -194,9 +194,16 @@ section {
 .hiking-image {
   background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(images/Lovers_Leap.jpg);
   background-size: cover;
+  background-position: center;
   /* Keeps the background fixed so the content scrolls over it   */
-  background-attachment: fixed;
+  background-attachment: scroll;
   padding-bottom: 4rem;
+}
+
+@media (min-width: 992px) {
+  .hiking-image {
+    background-attachment: fixed;
+  }
 }
 
 .card {
